[gd_scene load_steps=8 format=2]

[ext_resource path="res://CaveRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://1x/Item placeholder.png" type="Texture" id=8]
[ext_resource path="res://Main.gd" type="Script" id=9]
[ext_resource path="res://1x/Inventory.png" type="Texture" id=10]
[ext_resource path="res://PixelEmulator-xq08.ttf" type="DynamicFontData" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 84.0475, 260.863 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
script = ExtResource( 9 )

[node name="CaveRoomStart" parent="." instance=ExtResource( 1 )]

[node name="CaveRoomTwo" parent="." instance=ExtResource( 1 )]
visible = false

[node name="PlayerInventory" type="Sprite" parent="."]
position = Vector2( 480, 50 )
texture = ExtResource( 10 )

[node name="ItemList" type="ItemList" parent="PlayerInventory"]
visible = false
margin_left = -286.0
margin_top = -11.0
margin_right = -114.0
margin_bottom = 155.0
mouse_default_cursor_shape = 2
items = [ "", ExtResource( 8 ), false, "", ExtResource( 8 ), false ]
max_columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArea" type="Area2D" parent="."]

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( 90, 270 )
shape = SubResource( 1 )

[node name="RightArea" type="Area2D" parent="."]

[node name="RightCollisionShape" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 870, 270 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RoomLabel" type="Label" parent="CanvasLayer"]
margin_left = 816.0
margin_top = 13.0
margin_right = 957.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Room: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 809.0
margin_top = 13.0
margin_right = 950.0
margin_bottom = 68.0
color = Color( 0.784314, 0.784314, 0.784314, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="LeftArea" to="." method="_on_LeftArea_mouse_entered"]
[connection signal="mouse_exited" from="LeftArea" to="." method="_on_LeftArea_mouse_exited"]
[connection signal="mouse_entered" from="RightArea" to="." method="_on_RightArea_mouse_entered"]
[connection signal="mouse_exited" from="RightArea" to="." method="_on_RightArea_mouse_exited"]

[editable path="CaveRoomStart"]
